# deno

./: Cargo.toml
cli/: build.rs
cli/dts/: lib.deno.unstable.d.ts
cli/tsc/dts/: lib.deno.unstable.d.ts
core/: 01_core.js
ext/ffi/: 00_ffi.js  Cargo.toml  dlopen.rs  error.rs  fast_call.rs  lib.rs  unix.rs  windows.rs
ext/webgpu/: 01_webgpu.js  Cargo.toml  lib.rs  shader.rs  texture.rs
ext/webgpu/src/: surface.rs
ext/webserial/: 01_webserial.js  Cargo.toml  lib.rs
op_crates/clipboard/: 01_clipboard.js  02_idl_types.js  Cargo.toml  README.md  lib.deno_clipboard.d.ts  lib.rs
runtime/: Cargo.toml  build.rs  lib.rs  web_worker.rs  worker.rs
runtime/js/: 98_global_scope.js  99_main.js
runtime/ops/: clipboard.rs  mod.rs
serde_v8/src/: ser.rs
serde_v8/tests/: ser.rs
test_ffi/src/: lib.rs
test_ffi/tests/: ffi_types.ts  integration_tests.rs  test.js
tools/: core_import_map.json
