# Copyright 2018-2021 the Deno authors. All rights reserved. MIT license.

[package]
name = "deno_webgpu"
version = "0.35.0"
authors = ["the Deno authors"]
edition = "2018"
license = "MIT"
readme = "README.md"
repository = "https://github.com/gfx-rs/wgpu"
description = "WebGPU implementation for Deno"

[dependencies]
deno_core = { path = "../../core" }
serde = { version = "1.0", features = ["derive"] }
tokio = { version = "1.10", features = ["full"] }
wgpu-core = { git = "https://github.com/DjDeveloperr/wgpu.git", branch = "deno-webgpu-surface-ext", features = ["trace", "replay", "serde", "raw-window-handle"] }
wgpu-types = { git = "https://github.com/DjDeveloperr/wgpu.git", branch = "deno-webgpu-surface-ext", features = ["trace", "replay", "serde"] }
raw-window-handle = "0.4"
